bugfix: videos could overflow the screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -223,3 +223,7 @@ table tr td .mat-form-field-infix {
 .tags:hover .add-tag-icon {
     display: inline;
 }
+
+.modal-body video {
+   max-height: 100%;    
+}
